5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4347/executions/1649_2446.log
== TEST (2019-04-15 17:40:36) 
-- CODE:
senha = int(input("insira a senha de 6 digitos:")
d1 = num // 100000
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num // 100 % 10
d5 = num // 10 % 10
d6 = num // 1 %10

-- ERROR:
File "XXXX", line 2
    d1 = num // 100000
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:42:50) 
-- CODE:
senha = int(input("insira a senha de 6 digitos:")
d1 = num // 100000
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num // 100 % 10
d5 = num // 10 % 10
d6 = num // 1 %10


-- ERROR:
File "XXXX", line 2
    d1 = num // 100000
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:43:08) 
-- CODE:
num = int(input("insira a senha de 6 digitos:")
d1 = num // 100000
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num // 100 % 10
d5 = num // 10 % 10
d6 = num // 1 %10


-- ERROR:
File "XXXX", line 2
    d1 = num // 100000
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:43:21) 
-- CODE:
num = int(input("insira a senha de 6 digitos:")
d1 = num // 100000 % 10
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num // 100 % 10
d5 = num // 10 % 10
d6 = num // 1 %10


-- ERROR:
File "XXXX", line 2
    d1 = num // 100000 % 10
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:43:27) 
-- CODE:
num = int(input("insira a senha de 6 digitos:")
d = num // 100000 % 10
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num // 100 % 10
d5 = num // 10 % 10
d6 = num // 1 %10


-- ERROR:
File "XXXX", line 2
    d = num // 100000 % 10
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:43:38) 
-- CODE:
num = int(input("insira a senha de 6 digitos:"))
d1 = num // 100000 % 10
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num // 100 % 10
d5 = num // 10 % 10
d6 = num // 1 %10


-- ERROR:
File "XXXX", line 2
    d = num // 100000 % 10
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:46:31) 
-- CODE:
num = int(input("insira a senha de 6 digitos:"))
d1 = num // 100000 % 10
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num // 100 % 10
d5 = num // 10 % 10
d6 = num // 1 %10
if ((d2 + d4 + d6) % (d1 + d3 + d5) != 0):
	print("acesso liberado")
else:
	print("senha invalida")


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:46:41) 
-- CODE:
num = int(input("insira a senha de 6 digitos:"))
d1 = num // 100000 % 10
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num // 100 % 10
d5 = num // 10 % 10
d6 = num // 1 %10
if ((d2 + d4 + d6) % (d1 + d3 + d5) != 0):
	print("acesso liberado")
else:
	print("senha invalida")


-- EXECUTION TIME:
0.165528
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:47:01) 
-- CODE:
num = int(input("insira a senha de 6 digitos:"))
d1 = num // 100000 % 10
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num // 100 % 10
d5 = num // 10 % 10
d6 = num // 1 %10
if ((d2 + d4 + d6) % (d1 + d3 + d5) != 0):
	print("acesso liberado")
else:
	print("senha invalida")


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:47:26) 
-- CODE:
num = int(input("insira a senha de 6 digitos:"))
d1 = num // 100000 % 10
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num // 100 % 10
d5 = num // 10 % 10
d6 = num // 1 %10
if ((d2 + d4 + d6) % (d1 + d3 + d5) != 0):
	print("acesso liberado")
else:
	print("senha invalida")


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:49:51) 
-- CODE:
num = int(input("insira a senha de 6 digitos:"))
d1 = num // 100000 % 10
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num // 100 % 10
d5 = num // 10 % 10
d6 = num %10
if ((d2 + d4 + d6) % (d1 + d3 + d5) != 0):
	print("acesso liberado")
else:
	print("senha invalida")


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:51:51) 
-- CODE:
num = int(input("insira a senha de 1 a 6 digitos:"))
d1 = num // 100000 % 10
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num // 100 % 10
d5 = num // 10 % 10
d6 = num %10
if num = ((d2 + d4 + d6) % (d1 + d3 + d5) != 0):
	print("senha invalida")
else:
	print("acesso liberado")


-- ERROR:
File "XXXX", line 8
    if num = ((d2 + d4 + d6) % (d1 + d3 + d5) != 0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:52:01) 
-- CODE:
num = int(input("insira a senha de 1 a 6 digitos:"))
d1 = num // 100000 % 10
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num // 100 % 10
d5 = num // 10 % 10
d6 = num %10
if num = ((d2 + d4 + d6) % (d1 + d3 + d5) != 0)):
	print("senha invalida")
else:
	print("acesso liberado")


-- ERROR:
File "XXXX", line 8
    if num = ((d2 + d4 + d6) % (d1 + d3 + d5) != 0)):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:52:18) 
-- CODE:
num = int(input("insira a senha de 1 a 6 digitos:"))
d1 = num // 100000 % 10
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num // 100 % 10
d5 = num // 10 % 10
d6 = num %10
if num ((d2 + d4 + d6) % (d1 + d3 + d5) != 0)):
	print("senha invalida")
else:
	print("acesso liberado")


-- ERROR:
File "XXXX", line 8
    if num ((d2 + d4 + d6) % (d1 + d3 + d5) != 0)):
                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:52:27) 
-- CODE:
num = int(input("insira a senha de 1 a 6 digitos:"))
d1 = num // 100000 % 10
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num // 100 % 10
d5 = num // 10 % 10
d6 = num %10
if ((d2 + d4 + d6) % (d1 + d3 + d5) != 0)):
	print("senha invalida")
else:
	print("acesso liberado")


-- ERROR:
File "XXXX", line 8
    if ((d2 + d4 + d6) % (d1 + d3 + d5) != 0)):
                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:52:31) 
-- CODE:
num = int(input("insira a senha de 1 a 6 digitos:"))
d1 = num // 100000 % 10
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num // 100 % 10
d5 = num // 10 % 10
d6 = num %10
if ((d2 + d4 + d6) % (d1 + d3 + d5) != 0):
	print("senha invalida")
else:
	print("acesso liberado")


-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:52:37) 
-- CODE:
num = int(input("insira a senha de 1 a 6 digitos:"))
d1 = num // 100000 % 10
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num // 100 % 10
d5 = num // 10 % 10
d6 = num %10
if ((d2 + d4 + d6) % (d1 + d3 + d5) != 0):
	print("senha invalida")
else:
	print("acesso liberado")


-- EXECUTION TIME:
0.160956
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 20:44:26) 
-- CODE:
num = int(input("insira a senha de 1 a 6 digitos:"))
d1 = num // 100000 % 10
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num // 100 % 10
d5 = num // 10 % 10
d6 = num %10
if ((d2 + d4 + d6) % (d1 + d3 + d5) != 0):
	print("senha invalida")
else:
	print("acesso liberado")
#mano tu quer o mundo? eu te dou é dois

-- EXECUTION TIME:
0.142361
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
